<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/common_paddin_min"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/tvOperation"
        android:layout_height="wrap_content"
        tools:text="5-2"
        android:textAppearance="?attr/textAppearanceHeadline6"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/MyTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvResult"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/common_paddin_min"
        tools:text="3"
        android:gravity="center_vertical|end"
        android:textAppearance="?attr/textAppearanceHeadline3"
        app:layout_constraintTop_toBottomOf="@id/tvOperation"
        app:layout_constraintBottom_toTopOf="@id/llTop"
        style="@style/MyTextView"
        tools:ignore="MissingConstraints" />
        />

    <LinearLayout
        android:id="@+id/llBottom"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints"
        >


        <Button
            android:id="@+id/btnPoin"
            android:text="@string/calc_btn_point"
            style="@style/ButtonExtras"
            android:background="@drawable/rounded_corners"

            />
        <Button
            android:id="@+id/btnZero"
            android:text="@string/calc_btn_zero"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnResolve"
            android:text="@string/calc_btn_resolve"
            android:layout_marginStart="@dimen/common_paddin_default"
            style="@style/ButtonBigResolve"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llpreBottom"
        app:layout_constraintBottom_toTopOf="@id/llBottom"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints"
        >
        <Button
            android:id="@+id/btnOne"
            android:text="@string/calc_btn_one"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnTwo"
            android:text="@string/calc_btn_two"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnThree"
            android:text="@string/calc_btn_three"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnSum"
            android:text="@string/calc_btn_sum"
            style="@style/ButtonOperators"
            />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMiddle"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llpreBottom"

        >
        <Button
            android:id="@+id/btnFour"
            android:text="@string/calc_btn_four"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnFive"
            android:text="@string/calc_btn_five"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnSix"
            android:text="@string/calc_btn_six"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnSub"
            android:text="@string/calc_btn_sub"
            style="@style/ButtonOperators"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPreTop"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llMiddle"

        >
        <Button
            android:id="@+id/btnSeven"
            android:text="@string/calc_btn_seven"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnEigth"
            android:text="@string/calc_btn_eigth"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"

            />
        <Button
            android:id="@+id/btnNine"
            android:text="@string/calc_btn_nine"
            style="@style/ButtonNumeric"
            android:background="@drawable/rounded_corners"
            />
        <Button
            android:id="@+id/btnMulti"
            android:text="@string/calc_btn_multi"
            style="@style/ButtonOperators"

            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llTop"
        style="@style/MyLinearLayout"
        tools:ignore="MissingConstraints"
        app:layout_constraintBottom_toTopOf="@id/llPreTop"
        >
        <Button
            android:id="@+id/btnClear"
            android:text="@string/calc_btn_clear"
            android:layout_marginStart="@dimen/common_paddin_min"
            android:layout_marginEnd="@dimen/common_paddin_min"
            style="@style/ButtonBigClear"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            app:icon="@drawable/ic_delete"
            app:iconGravity="textStart"
            app:iconPadding="@dimen/paddin_ic_none"
            tools:ignore="SpeakableTextPresentCheck"
            style="@style/ButtonExtras"

            />
        <Button
            android:id="@+id/btnDiv"
            android:text="@string/calc_btn_div"
            style="@style/ButtonOperators"
            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>